Ensure quick action menu group icons are colored appropriately in both light and dark modes

--- a/html/css/app.css
+++ b/html/css/app.css
@@ -104,6 +104,10 @@
   background-color: rgba(230, 230, 230, 0.25);
  }
 
+.v-list-item__icon.v-list-group__header__append-icon .theme--light{
+  color: white !important;
+}
+
 /* Sensoroni-specific element styles */
 .hardwrap {
   word-wrap: break-word;
